--- a/src/scripts/.vscode/settings.json
+++ b/src/scripts/.vscode/settings.json
@@ -6,5 +6,6 @@
     "python.analysis.extraPaths": [
         "/home/ubuntu/catkin_ws/devel/lib/python3/dist-packages",
         "/opt/ros/noetic/lib/python3/dist-packages"
-    ]
+    ],
+    "ros.distro": "noetic"
 }
